--- a/IndyGo/www/css/style.css
+++ b/IndyGo/www/css/style.css
@@ -1301,3 +1301,44 @@
 	#destination-input:focus {
 		border-color: #4d90fe;
 	}
+
+
+		.controls {
+				margin-top: 10px;
+				border: 1px solid transparent;
+				border-radius: 2px 0 0 2px;
+				box-sizing: border-box;
+				-moz-box-sizing: border-box;
+				height: 32px;
+				outline: none;
+				box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+		}
+
+
+		#origin-input,
+		#destination-input {
+				background-color: #fff;
+				font-family: Roboto;
+				font-size: 15px;
+				font-weight: 300;
+				margin-left: 35px;
+				text-overflow: ellipsis;
+				width: 150px;
+		}
+
+		#origin-input,
+		#destination-input {
+				background-color: #fff;
+				font-family: Roboto;
+				font-size: 15px;
+				font-weight: 300;
+				margin-left: 35px;
+				text-overflow: ellipsis;
+				width: 150px;
+		}
+
+
+		#origin-input:focus,
+		#destination-input:focus {
+				border-color: #4d90fe;
+		}
